# binance-LOB

./: .env.dev  .env.prod  .gitignore  clickhouse_users.xml  config.py  docker-compose-clickhouse-server.yml  docker-compose.yml  dockerfile-aggtrade  get_BINANCE_history_trade_count.py  index.py  main.py  main_aggtrade.py  model_aggtrade.py  pyproject.toml  replay.py  replay_aggtrade.py
