[tool.poetry]
name = "binance-lob"
version = "0.1.0"
description = ""
authors = ["cblh <chenbeiliuhuo@gamil.com>"]

[tool.poetry.dependencies]
python = "^3.8"
tqdm = "4.51.0"
sortedcontainers = "2.4.0"
clickhouse-driver = "0.2.0"
"infi.clickhouse-orm" = "2.1.0"
aiohttp = "3.7.4.post0"
pydantic = "1.8.2"
infi = "0.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
