[tool.poetry]
name = "binancelob"
version = "0.1.0"
description = ""
authors = ["cblh <chenbeiliuhuo@gamil.com>"]
packages = [
    { include = "*.py" },
]

[tool.poetry.dependencies]
python = "^3.8,<3.10"
tqdm = "^4.64.0"
sortedcontainers = "2.4.0"
clickhouse-driver = "^0.2.0"
"infi.clickhouse-orm" = "^2.1.0"
aiohttp = "^3.8.1"
pydantic = "^1.9.1"
infi = "0.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
